--- a/01-hangman-lite/index.html
+++ b/01-hangman-lite/index.html
@@ -6,7 +6,10 @@
   <title>Hangman Lite</title>
 </head>
 <body>
-  
+ <h2>Hangman</h2>
+<div class="letter">Guess a letter
+ <button id="guess">Guess</button>
+</div>
   <script src="./main.js"></script>
 </body>
 </html>
