--- a/02-tallest-mountain/index.html
+++ b/02-tallest-mountain/index.html
@@ -6,7 +6,9 @@
   <title>Tallest Mountain</title>
 </head>
 <body>
-  
+  <div class="mountainanswer">Tallest Mountain
+    <button id="answer">the height is</button>
+  </div>
   <script src="./main.js"></script>
 </body>
 </html>
